Converted index.php to index.html.
Some documentation cleanup too.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<?php
+<!doctype html>
+<!--
 
 /**
  * BibleForge
@@ -10,18 +11,17 @@
  * @author BibleForge <http://mailhide.recaptcha.net/d?k=01jGsLrhXoE5xEPHj_81qdGA==&c=EzCH6aLjU3N9jI2dLDl54-N4kPCiE8JmTWHPxwN8esM=>
  */
 
-error_reporting(E_ALL);
-
-?>
-<!doctype html>
+-->
 <html>
 <head>
 	<meta http-equiv=content-type content="text/html;charset=UTF-8">
 	<title>BibleForge</title>
 	<link rel=stylesheet type="text/css" href="styles/base.css">
+	<!-- For Safari on iPhones -->
+	<!-- NOTE: maximum-scale=0.6667 is to keep the same size when the iPhone is rotated. -->
+	<!-- TODO: Test this on an iPhone. -->
 	<meta name=viewport content="width=480,maximum-scale=0.6667">
 </head>
-<?php flush() ?>
 <body>
 <div id=topBar>
 	<div id=searchBar>
