--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!--
 
 /**
@@ -12,29 +11,33 @@
  */
 
 -->
+<!doctype html>
 <html>
 <head>
 	<meta http-equiv=content-type content="text/html;charset=UTF-8">
 	<title>BibleForge</title>
-	<link rel=stylesheet type="text/css" href="styles/base.css">
+	<link rel=stylesheet href="styles/base.css">
 	<!-- For Safari on iPhones -->
 	<!-- NOTE: maximum-scale=0.6667 is to keep the same size when the iPhone is rotated. -->
-	<!-- TODO: Test this on an iPhone. -->
 	<meta name=viewport content="width=480,maximum-scale=0.6667">
 </head>
 <body>
-<div id=topBar>
-	<div id=searchBar>
-		<form action="#" onsubmit="return prepare_new_search(true);">
-			BibleForge
-			<input type=text name=q id=q>
-			<input type=submit name=Search value=Go>
-		</form>
+<div id=viewPort>
+	<div id=topBar>
+		<div id=searchBar>
+			<form action="#" onsubmit="return prepare_new_search();">
+				BibleForge
+				<input type=text name=q id=q>
+				<input type=submit name=Search value=Go>
+			</form>
+		</div>
+		<div id=infoBar></div>
 	</div>
-	<div id=infoBar></div>
+	<div id=topLoader class=loader></div>
+	<div id=page></div>
+	<div id=bottomLoader class=loader></div>
 </div>
-<div id=topLoader class=loader></div><div id=page></div><div id=bottomLoader class=loader></div>
-<script src="js/lang/en.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<script src="js/lang/en.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
