Preparing HTML and CSS for JavaScript code restructuring.

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 	<meta name=viewport content="width=480,maximum-scale=0.6667">
 </head>
 <body>
-<div id=viewPort>
-	<div id=topBar>
-		<div id=searchBar>
-			<form action="#" onsubmit="return prepare_new_search();">
+<div id=viewPort1 class=viewPorts>
+	<div id=topBar1 class=topBars>
+		<div id=searchBar1 class=searchBars>
+			<form action="#" id=searchForm1>
 				BibleForge
-				<input type=text name=q id=q>
-				<input type=submit name=Search value=Go>
+				<input type=text name=q id=q1 class=textInputs>
+				<input type=submit name=sub value=Go>
 			</form>
 		</div>
-		<div id=infoBar></div>
+		<div id=infoBar1 class=infoBars></div>
 	</div>
-	<div id=topLoader class=loader></div>
-	<div id=page></div>
-	<div id=bottomLoader class=loader></div>
+	<div id=topLoader1 class=loaders></div>
+	<div id=scroll1 class=scrolls></div>
+	<div id=bottomLoader1 class=loaders></div>
 </div>
 <script src="js/lang/en.js"></script>
 <script src="js/main.js"></script>
