Added new, beautiful input box.
Added a beautiful input box using CSS.
It doesn't look special in IE 8-, no surprise there, but it is functional.
Opera has minor glitches: the shadow background extends past the rounded corners, and the input box is too close to the top of the page.
Removed "BibleForge" text so that the input box will be centered correctly.
Should add a logo in the background (when a logo exists).

(NOTE: Chrome started acting strange.  It seems to be scrolling down after
loading both top and bottom results and the user clicks off of the search box.)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <div id=topBar1 class=topBars>
         <div id=searchBar1 class=searchBars>
             <form action="#" id=searchForm1>
-                BibleForge
-                <input type=text name=q id=q1 class=textInputs>
-                <input type=submit name=sub value=Go>
+                <input type=text name=q id=q1 class=queryInput><label for=q1><input type=image  class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODdhEAAQAOMKAAIFARweHDU3NFlbWHJ0cYqMiautqsjLx9ze2/3//P///////////////////////ywAAAAAEAAQAAAETDBJEgAYR2qNgDDIMQDFpgGEeQCGSQimZABm0MYJvQEInvenDE6nGQxwKxVAuDuaCizNioebWSwEKBC3TUCJPknHEt5MweFpoCz1RAAAOw=="></label>
             </form>
         </div>
         <div id=infoBar1 class=infoBars></div>
