Better iPad (and iPhone) support.
Improved the viewport settings for Safari to render better on the iPad.
It also allows for pinch zooming on both the iPad and iPhone.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <title>BibleForge</title>
     <link rel=stylesheet href="styles/base.css">
-    <!-- For Safari on iPhones -->
-    <!-- NOTE: maximum-scale=0.6667 is to keep the same size when the iPhone is rotated. -->
-    <meta name=viewport content="width=480,maximum-scale=0.6667">
+    <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
+    <meta name=viewport content="width=device-width">
 </head>
 <body>
 <div id=viewPort1 class=viewPorts>
