Added a meta description tag.
Currently only in English.  Perhaps it might be good to support other languages.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <title>BibleForge</title>
     <link rel=stylesheet href="styles/base.css">
+    <meta name=description content="BibleForge: The free, open source Bible Study web app.">
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <meta name=viewport content="width=device-width">
 </head>
