Added wrench icon with rounded corners and also uses the corner hot spot.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 <body>
 <div id=viewPort1 class=viewPorts>
     <div id=topBar1 class=topBars>
+        <label for=wrenchIcon1 class=wrenchPadding><input onclick=alert(123) type=image id=wrenchIcon1 class=wrenchIcon title="Customize and Configure BibleForge" src="data:image/gif;base64,R0lGODdhEAAQAMIIAAACADc5NlZXVXV3dJaYlLq8ucvNyv3//CwAAAAAEAAQAAADO3i6SwEgsHkeBIa2ixXRFiB4AMgNA6QJHEcZrcvAMfQtdF0wRStpPc4I2BpSCK2BRpFcKlgQpVPxkE4TADs="></label>
         <div id=searchBar1 class=searchBars>
             <form action="#" id=searchForm1>
-                <input type=text name=q id=q1 class=queryInput><label for=q1><input type=image  class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"></label>
+                <input type=text name=q id=q1 class=queryInput><label for=q1><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"></label>
             </form>
         </div>
         <div id=infoBar1 class=infoBars></div>
