Adjusted CSS and HTML to handle the wrench icon and query input box at small sizes.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         </label>
         <div id=searchBar1 class=searchBars>
             <form action="#" id=searchForm1>
-                <input type=text name=q id=q1 class=queryInput><label for=q1><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"></label>
+                <label for=q1 class=queryPadding>
+                    <nobr>
+                        <input type=text name=q id=q1 class=queryInput><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7">
+                    </nobr>
+                </label>
             </form>
         </div>
         <div id=infoBar1 class=infoBars></div>
