Preparing for loading secondary external JavaScript and a different single global object (BF).

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id=topBar1 class=topBars>
         <!-- A label is used to allow the user to move the cursor all the way to the corner and still be able to click on the button. -->
         <label for=wrenchIcon1 class=wrenchPadding>
-            <input onclick=alert(123) type=image id=wrenchIcon1 class=wrenchIcon title="Customize and Configure BibleForge" src="data:image/gif;base64,R0lGODdhEAAQAMIIAAEDADAyL05OSWlpYYyLg7GwqNjVyP/97iwAAAAAEAAQAAADQ3i6OwBhsGnCe2Qy+4LRS3EBn5JNxCgchgBo6ThwFDc+61LdY6m4vEeBAbwMBBHfoYgBLW8njUPmPNwk1SkAW31yqwkAOw==">
+            <input type=image id=wrenchIcon1 class=wrenchIcon title="Customize and Configure BibleForge" src="data:image/gif;base64,R0lGODdhEAAQAMIIAAEDADAyL05OSWlpYYyLg7GwqNjVyP/97iwAAAAAEAAQAAADQ3i6OwBhsGnCe2Qy+4LRS3EBn5JNxCgchgBo6ThwFDc+61LdY6m4vEeBAbwMBBHfoYgBLW8njUPmPNwk1SkAW31yqwkAOw==">
         </label>
         <div id=searchBar1 class=searchBars>
             <form action="#" id=searchForm1>
