--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
     <meta name=viewport content="width=device-width">
 </head>
 <body>
-<div id=viewPort1 class=viewPorts>
-    <div id=topBar1 class=topBars>
-        <!-- A label is used to allow the user to move the cursor all the way to the corner and still be able to click on the button. -->
-        <label for=wrenchIcon1 class=wrenchPadding>
-            <input type=image id=wrenchIcon1 class=wrenchIcon title="Customize and Configure BibleForge" src="data:image/gif;base64,R0lGODdhEAAQAMIIAAEDADAyL05OSWlpYYyLg7GwqNjVyP/97iwAAAAAEAAQAAADQ3i6OwBhsGnCe2Qy+4LRS3EBn5JNxCgchgBo6ThwFDc+61LdY6m4vEeBAbwMBBHfoYgBLW8njUPmPNwk1SkAW31yqwkAOw==">
-        </label>
+<div id=viewPort1 class=viewPorts
+   ><div id=topBar1 class=topBars>
         <div id=searchBar1 class=searchBars>
             <form action="#" id=searchForm1>
                 <label for=q1 class=queryPadding>
