Rewrote HTML to remove whitespace in the body (DOM) and changed the end of the ID's from 1 to 0.

--- a/index.html
+++ b/index.html
@@ -21,25 +21,26 @@
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <meta name=viewport content="width=device-width">
 </head>
-<body>
-<div id=viewPort1 class=viewPorts
-   ><div id=topBar1 class=topBars>
-        <div id=searchBar1 class=searchBars>
-            <form action="#" id=searchForm1>
-                <label for=q1 class=queryPadding>
-                    <nobr>
-                        <input type=text name=q id=q1 class=queryInput><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7">
-                    </nobr>
-                </label>
-            </form>
-        </div>
-        <div id=infoBar1 class=infoBars></div>
-    </div>
-    <div id=topLoader1 class=loaders></div>
-    <div id=scroll1 class=scrolls></div>
-    <div id=bottomLoader1 class=loaders></div>
-</div>
-<script src="js/lang/en.js"></script>
-<script src="js/main.js"></script>
-</body>
-</html>
+<body
+><div id=viewPort0 class=viewPorts
+    ><div id=topBar0 class=topBars
+        ><div id=searchBar0 class=searchBars
+            ><form action="#" id=searchForm0
+                ><label for=q0 class=queryPadding
+                    ><nobr
+                        ><input type=text name=q id=q0 class=queryInput
+                        ><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
+                    ></nobr
+                ></label
+            ></form
+        ></div
+        ><div id=infoBar0 class=infoBars></div
+    ></div
+    ><div id=topLoader0 class=loaders></div
+    ><div id=scroll0 class=scrolls></div
+    ><div id=bottomLoader0 class=loaders></div
+></div
+><script src="js/lang/en.js"></script
+><script src="js/main.js"></script
+></body
+></html>
