--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <html>
 <head>
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
+    <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
     <link rel=stylesheet href="styles/base.css">
     <meta name=description content="BibleForge: The free, open source Bible Study web app.">
