Moved the creation of the BF variable to inside of index.html.
This way, it doesn't need to be created in a language specific file (which
wastes space) and every file can correctly assume it's existence.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     ><div id=scroll0 class=scrolls></div
     ><div id=bottomLoader0 class=loaders></div
 ></div
+><script>
+    /// Create the global BibleForge variable into which everything else can attach.
+    var BF = {};
+</script
 ><script src="js/lang/en.js"></script
 ><script src="js/main.js"></script
 ></body
