Added alt attribute to magnifying glass and wrench images.
NOTE: The HTML texts need to be configurable via a language specific file.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 ><label for=q0 class=queryPadding
                     ><nobr
                         ><input type=text name=q id=q0 class=queryInput
-                        ><input type=image class=inputIcon title="Click here (or press Enter)" src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
+                        ><input type=image class=inputIcon title="Click here (or press Enter)" alt=Go src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
                     ></nobr
                 ></label
             ></form
