All JavaScript now uses ES5 strict mode (if available).
Firefox 4 nightly is now completely strict mode compliant.  WebKit is close.
IE and Opera have not begun to implement it yet.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     ><div id=bottomLoader0 class=loaders></div
 ></div
 ><script>
+    "use strict";
+    
     /// Create the global BibleForge variable into which everything else can attach.
     var BF = {};
 </script
