--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
     <link rel=stylesheet href="styles/base.css">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name=description content="BibleForge: The free, open source Bible Study web app.">
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <!-- The Froyo browser on Android 2.2 needs scaling disabled in order for fixed positioning to work. -->
