--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ no other style sheets are used.  It is planned to allow users to add their own c
     
     /// Create the global BibleForge variable to which everything else attaches.
     var BF = {};
+    /// Create the basis for the language object.
+    BF.langs = {};
 </script
 ><script src="js/lang/en.js"></script
 ><script src="js/main.js"></script
