--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 </head>
 <body
-><div id=viewPort0 class=viewPorts
-    ><div id=topBar0 class=topBars
-        ><div id=searchBar0 class=searchBars
-            ><form action="#" id=searchForm0
+><div class=viewPorts id=viewPort0
+    ><div class=topBars
+        ><div class=searchBars
+            ><form action="#"
                 ><label for=q0 class=queryPadding
                     ><nobr
                         ><input type=text name=q id=q0 class=queryInput
@@ -60,11 +60,11 @@ no other style sheets are used.  It is planned to allow users to add their own c
                 ></label
             ></form
         ></div
-        ><div id=infoBar0 class=infoBars></div
+        ><div class=infoBars></div
     ></div
-    ><div id=topLoader0 class=loaders></div
-    ><div id=scroll0 class=scrolls></div
-    ><div id=bottomLoader0 class=loaders></div
+    ><div class=loaders></div
+    ><div class=scrolls></div
+    ><div class=loaders></div
 ></div
 ><script>
     "use strict";
