--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
             ><form action="#"
                 ><label for=q0 class=queryPadding
                     ><nobr
+                        ><input type=button class=lang
                         ><input type=text name=q id=q0 class=queryInput
                         ><input type=image class=inputIcon title="Click here (or press Enter)" alt=Go src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
                     ></nobr
