--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="styles/base.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel=stylesheet href="/styles/base.css">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
-    <link rel="apple-touch-icon" href="images/scroll_64.png">
+    <link rel="apple-touch-icon" href="/images/scroll_64.png">
     <meta name=description content="BibleForge: The free, open source Bible Study web app.">
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <!-- The Froyo browser on Android 2.2 needs scaling disabled in order for fixed positioning to work. -->
@@ -88,7 +88,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
         }
     };
 </script
-><script src="js/lang/en.js"></script
-><script src="js/main.js"></script
+><script src="/js/lang/en.js"></script
+><script src="/js/main.js"></script
 ></body
 ></html>
