--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css">
+    <link rel=stylesheet href="/styles/base.css?1325641394">
     <link rel="icon" type="image/png" href="/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
@@ -84,11 +84,12 @@ no other style sheets are used.  It is planned to allow users to add their own c
             full_name: "English"
         },
         en_em: {
-            full_name: "Early Modern English (1611)"
+            full_name: "Early Modern English (1611)",
+            modified:  1325641394
         }
     };
 </script
-><script src="/js/lang/en.js"></script
-><script src="/js/main.js"></script
+><script src="/js/lang/en.js?1325641394"></script
+><script src="/js/main.js?1326007520"></script
 ></body
 ></html>
