The beginning of a non-JS version.
Verse lookups work.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
 ><div class=viewPorts id=viewPort0
     ><div class=topBars
         ><div class=searchBars
-            ><form action="#"
+            ><form action="/!"
                 ><label for=q0 class=queryPadding
                     ><nobr
                         ><input type=button class=lang
