--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?15288">
+    <link rel=stylesheet href="/styles/base.css?247387">
     <link rel="icon" type="image/png" href="/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
@@ -74,7 +74,9 @@ no other style sheets are used.  It is planned to allow users to add their own c
                 ></label
             ></form
         ></div
-        ><div class=infoBars></div
+        ><div class=infoBars
+            ><div class=infoLeft></div
+        ></div
     ></div
     ><div class=loaders></div
     ><div class=scrolls></div
@@ -100,6 +102,6 @@ no other style sheets are used.  It is planned to allow users to add their own c
     };
 </script
 ><script src="/js/lang/en.js?1203"></script
-><script src="/js/main.js?160897"></script
+><script src="/js/main.js?243948"></script
 ></body
 ></html>
