--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ no other style sheets are used.  It is planned to allow users to add their own c
         },
         en_em: {
             full_name: "Early Modern English (1611)",
-            modified:  1195
+            modified:  1007391
         }
     };
 </script
-><script src="/js/lang/en.js?1203"></script
+><script src="/js/lang/en.js?1007380"></script
 ><script src="/js/main.js?962588"></script
 ></body
 ></html>
