--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@ no other style sheets are used.  It is planned to allow users to add their own c
     };
 </script
 ><script src="/js/lang/en.js?1008601"></script
-><script src="/js/main.js?962588"></script
+><script src="/js/main.js?1135104"></script
 ></body
 ></html>
