--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?962677">
+    <link rel=stylesheet href="/styles/base.css?1725931">
     <link rel="icon" type="image/png" href="/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
@@ -102,6 +102,6 @@ no other style sheets are used.  It is planned to allow users to add their own c
     };
 </script
 ><script src="/js/lang/en.js?1540000"></script
-><script src="/js/main.js?1574259"></script
+><script src="/js/main.js?1727185"></script
 ></body
 ></html>
