--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ no other style sheets are used.  It is planned to allow users to add their own c
     
     /// Create the basis for the language object.
     ///NOTE: The elements in this object are overwritten if/when the code is actually downloaded.
+    ///NOTE: Could use window.navigator.language (or perhaps navigator.userLanguage) to determine the user's language.
+    ///NOTE: On the server side, the Accept-Language header could be used.
     BF.langs = {
         /// Although this code is currently loaded by default (and so full_name will rewritten soon), in the future, the default language might be dynamically chosen.
         en: {
