Added initials of the Bible version to the English.

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@ no other style sheets are used.  It is planned to allow users to add their own c
     ///NOTE: The elements in this object are overwritten if/when the code is actually downloaded.
     ///NOTE: Could use window.navigator.language (or perhaps navigator.userLanguage) to determine the user's language.
     ///NOTE: On the server side, the Accept-Language header could be used.
+    ///TODO: This object needs to be created in the Forge.
     BF.langs = {
         /// Although this code is currently loaded by default (and so full_name will rewritten soon), in the future, the default language might be dynamically chosen.
         en: {
-            full_name: "English"
+            full_name: "English (KJV)"
         },
         en_em: {
             full_name: "Early Modern English (1611)",
@@ -103,7 +104,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
         }
     };
 </script
-><script src="/js/lang/en.js?3440738"></script
+><script src="/js/lang/en.js?3521186"></script
 ><script src="/js/main.js?3381740"></script
 ></body
 ></html>
