--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
  * @author  BibleForge <info@bibleforge.com>
  */
 
+/**
+ * Copyright (C) 2012
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ * 
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see http://www.opensource.org/licenses/AGPL-3.0.
+ */
+
 Welcome to hacking BibleForge.
 
 This is the first file that is loaded when BibleForge loads.  It is pretty simple.
@@ -39,7 +56,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?3521638">
+    <link rel=stylesheet href="/styles/base.css?4609159">
     <link rel="icon" type="image/png" href="/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
@@ -100,11 +117,11 @@ no other style sheets are used.  It is planned to allow users to add their own c
         },
         en_em: {
             full_name: "Early Modern English (1611)",
-            modified:  4555696
+            modified:  4609102
         }
     };
 </script
-><script src="/js/lang/en.js?4555669"></script
-><script src="/js/main.js?4552403"></script
+><script src="/js/lang/en.js?4609094"></script
+><script src="/js/main.js?4609095"></script
 ></body
 ></html>
