Moved the charset meta parameter near the top to prevent needless reloads.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!-- NOTE: The doctype tag must be first in order for IE to render the page correctly. -->
+<html>
+<head>
+    <!-- NOTE: If the charset meta parameter is placed after the 1024th byte, some browsers reload the page after parsing the meta data. -->
+    <meta http-equiv=content-type content="text/html;charset=UTF-8">
 <!--
 
 /**
@@ -23,7 +28,7 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Affero General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see http://www.opensource.org/licenses/AGPL-3.0.
  */
@@ -51,9 +56,6 @@ styles/base.css is also loaded, which contains the essential styles for BibleFor
 no other style sheets are used.  It is planned to allow users to add their own custom styles.
 
 -->
-<html>
-<head>
-    <meta http-equiv=content-type content="text/html;charset=UTF-8">
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
     <link rel=stylesheet href="/styles/base.css?8671190">
