Adopting the short HTML5 charset declaration.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <!-- NOTE: If the charset meta parameter is placed after the 1024th byte, some browsers reload the page after parsing the meta data. -->
-    <meta http-equiv=content-type content="text/html;charset=UTF-8">
+    <meta charset=utf-8>
 <!--
 
 /**
