Set the language ID for the non-JS version to change the CSS.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -85,7 +85,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
         ></div
     ></div
     ><!-- This <div> is used to push the data down below the top bar. --><div class=loaders></div
-    ><div class=scrolls>__CONTENT__</div
+    ><div class="lang___LANG__ scrolls">__CONTENT__</div
 ></div
 ></body
 ></html>
