--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?17459481">
+    <link rel=stylesheet href="/styles/base.css?17541539">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
@@ -86,7 +86,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
             ><form action="/!"
                 ><label for=q0 class=queryPadding
                     ><nobr
-                        ><input type=button class=lang
+                        ><button type=button class=lang></button
                         ><input type=text name=q id=q0 class=queryInput
                         ><input type=image class=inputIcon alt=Go src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
                     ></nobr
@@ -102,6 +102,6 @@ no other style sheets are used.  It is planned to allow users to add their own c
     ><div class=loaders></div
 ></div
 ><script src="/js/lang/en.js?17180886"></script
-><script src="/js/main.js?17458494"></script
+><script src="/js/main.js?17609321"></script
 ></body
 ></html>
