--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -41,6 +41,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 -->
     <title>__TITLE__</title>
     <link rel=stylesheet href="/styles/base.css?26893274">
+    __LANG_CSS__
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: Ideally, this should be at least 114 pixels. -->
