Replaced the touch icon with a much larger one (210px).

--- a/client/index.html
+++ b/client/index.html
@@ -61,8 +61,8 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <link rel=stylesheet href="/styles/base.css?26893274">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
-    <!-- NOTE: Ideally, this should be at least 114 pixels. -->
-    <link rel="apple-touch-icon" href="/images/scroll_64.png">
+    <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
+    <link rel="apple-touch-icon" href="/images/scroll_210.png">
     <meta name=description content="BibleForge: The free, open source Bible Study web app.">
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <!-- The Froyo browser on Android 2.2 needs scaling disabled in order for fixed positioning to work. -->
