--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -44,8 +44,8 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
     __LANG_CSS__
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
-    <!-- NOTE: Ideally, this should be at least 114 pixels. -->
-    <link rel="apple-touch-icon" href="/images/scroll_64.png">
+    <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
+    <link rel="apple-touch-icon" href="/images/scroll_210.png">
     <meta name=description content="BibleForge: The free, open source Bible Study web app. __DESC__">
     <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
     <!-- The Froyo browser on Android 2.2 needs scaling disabled in order for fixed positioning to work. -->
