--- a/client/index.html
+++ b/client/index.html
@@ -79,9 +79,10 @@ no other style sheets are used.  It is planned to allow users to add their own c
     <![endif]-->
     <script>
     /// Redirect the default Android browser.
+    
     if (window.navigator.userAgent.indexOf("Mobile Safari/") >= 0 && window.navigator.userAgent.indexOf("Android") >= 0) {
         ///NOTE: URL's should with a slash (/), but in case they do not, add the slash.
-        window.location.replace(window.location + (window.location.toString().slice(-1). === "/" ? "" : "/") + "!");
+        window.location.replace(window.location + (window.location.toString().slice(-1) === "/" ? "" : "/") + "!");
     }
     </script>
     <!-- Tell Googlebot (and maybe other bots) to retry the same address with "?_escaped_fragment_=" at the end. -->
