Moved the magnifying glass graphic to the CSS.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -40,7 +40,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 
 -->
     <title>__TITLE__</title>
-    <link rel=stylesheet href="/styles/base.css?27994506">
+    <link rel=stylesheet href="/styles/base.css?28001044">
     __LANG_CSS__
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
@@ -80,7 +80,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
                     ><nobr
                         ><input type=button class=lang
                         ><input type=text value="__QUERY__" name=q id=q0 class=queryInput
-                        ><input type=image class=inputIcon alt=Go src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
+                        ><input type=button class=inputIcon alt=Go
                         ><!-- Hide the submit button that gets created when JavaScript is disabled. --><input type=submit style="display:none;"
                     ></nobr
                 ></label
