--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?27994506">
+    <link rel=stylesheet href="/styles/base.css?28001044">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
@@ -97,7 +97,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
                     ><nobr
                         ><button type=button class=lang></button
                         ><input type=text name=q id=q0 class=queryInput
-                        ><input type=image class=inputIcon alt=Go src="data:image/gif;base64,R0lGODlhEAAQAPIHAAIFARweHDU3NFlbWHJ0cZ2fnNDTz/3//CH5BAAKAAAALAAAAAAQABAAAANDeLpnAyAQRgsYxhQBDD2WxxDABxTfIUxMmRYBY7jfTNGU3YrUMPQ4xYwnhPAsKNmJBIEkF05ZqkmcGlOMwBW74FSxCQA7"
+                        ><input type=button class=inputIcon alt=Go
                     ></nobr
                 ></label
             ></form
