Use a submit button (instead of merely a button) to allow for proper form submission.

--- a/client/index.html
+++ b/client/index.html
@@ -97,7 +97,7 @@ no other style sheets are used.  It is planned to allow users to add their own c
                     ><nobr
                         ><button type=button class=lang></button
                         ><input type=text name=q id=q0 class=queryInput
-                        ><input type=button class=inputIcon alt=Go
+                        ><input type=submit class=inputIcon alt=Go value=""
                     ></nobr
                 ></label
             ></form
