--- a/client/index.html
+++ b/client/index.html
@@ -58,16 +58,13 @@ no other style sheets are used.  It is planned to allow users to add their own c
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?28887210">
+    <link rel=stylesheet href="/styles/base.css?29192732">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
     <link rel="apple-touch-icon" href="/images/scroll_210.png">
     <meta name=description content="BibleForge: The free, open source Bible Study web app.">
-    <!-- Safari on the iPhone or iPad requires that the viewport width be set. -->
-    <!-- The Froyo browser on Android 2.2 needs scaling disabled in order for fixed positioning to work. -->
-    <!-- TODO: The correct header should probably be sent dynamically from the server. -->
-    <meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <!-- NOTE: Viewport properties are set in the CSS because the viewport meta tag does not support using a percentage for the width property. -->
     <!-- Redirect unsupported browsers and those with JavaScript turned off to a non-JS version. -->
     <!-- Redirect browsers with JavaScript disabled. -->
     <noscript>
