Updated notes about CSS locations.

--- a/client/index.html
+++ b/client/index.html
@@ -52,8 +52,8 @@ js/secondary.js is lazily loaded by js/main.js.  It contains code that is not es
 BibleForge or that can be loaded later with no impact to BibleForge's usability.  It is loaded
 later to make BibleForge start quicker.
 
-styles/base.css is also loaded, which contains the essential styles for BibleForge.  Currently,
-no other style sheets are used.  It is planned to allow users to add their own custom styles.
+styles/base.css is also loaded, which contains the essential styles for BibleForge.  Other styles,
+which may be loaded later, are located in styles/night.css.
 
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
