Display a drop down box of available languages.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -73,7 +73,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
     ><div class=topBars
         ><div class=searchBars
             ><form action="/!"
-                ><label for=q0 class=queryPadding
+                >__LANG_SELECT__<label for=q0 class=queryPadding
                     ><nobr
                         ><input type=button class=lang
                         ><input type=text value="__QUERY__" name=q id=q0 class=queryInput
