Show a message to unsupported browsers.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -40,7 +40,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 
 -->
     <title>{TITLE}</title>
-    <link rel=stylesheet href="/styles/base.css?38006941">
+    <link rel=stylesheet href="/styles/base.css?38271617">
     {LANG_CSS}
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
@@ -87,6 +87,8 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
         ></div
     ></div
     ><!-- This <div> is used to push the data down below the top bar. --><div class=loaders></div
+    ><div class=unsupported_warning
+    >{UNSUPPORTED_WARNING}</div
     ><div class="lang_{LANG} scrolls">{CONTENT}</div
 ></div
 ></body
