Show information about the Bible version in the footer of the non-JS version.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -40,7 +40,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 
 -->
     <title>{TITLE}</title>
-    <link rel=stylesheet href="/styles/base.css?38271617">
+    <link rel=stylesheet href="/styles/base.css?38356234">
     {LANG_CSS}
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
@@ -69,7 +69,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
     <![endif]-->
 </head>
 <body
-><!-- TODO: Add language selector and wrench menu. --><div class=viewPorts id=viewPort0
+><div class=viewPorts id=viewPort0
     ><div class=topBars
         ><div class=searchBars
             ><form action="/!"
@@ -90,6 +90,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
     ><div class=unsupported_warning
     >{UNSUPPORTED_WARNING}</div
     ><div class="lang_{LANG} scrolls">{CONTENT}</div
+    ><div class=footer>{FOOTER}</div
 ></div
 ></body
 ></html>
