--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -56,8 +56,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
     <!--[if !IE]> -->
         <script>
             /// Do not redirect Android browsers.
-            console.log(window.navigator.userAgent.indexOf("Mobile Safari/"))
-            if (window.navigator.userAgent.indexOf("Mobile Safari/") === -1 && window.navigator.userAgent.indexOf("Android") === -1) {
+            if ({FORCE_REDIRECT}window.navigator.userAgent.indexOf("Mobile Safari/") === -1 && window.navigator.userAgent.indexOf("Android") === -1) {
                 window.location.replace("{FULL_URI}");
             }
         </script>
