Moved to the MIT license.

--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -13,25 +13,33 @@
  * @date    05-26-12
  * @version alpha (α)
  * @link    http://BibleForge.com
- * @license GNU Affero General Public License 3.0 (AGPL-3.0)
- * @author  BibleForge <info@bibleforge.com>
+ * @license MIT
  */
 
-/**
+/*!
+ * The BibleForge motto:
+ *
+ * "all things whatsoever ye would that men should do to you, do ye even so to them."
+ *     —Jesus (Matthew 7:12)
+ */
+
+/*!
  * Copyright (C) 2013
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * Permission is hereby granted, free of charge, to any person obtaining
+ * a copy of this software and associated documentation files (the
+ * “Software”), to deal in the Software without restriction, including
+ * without limitation the rights to use, copy, modify, merge, publish,
+ * distribute, sublicense, and/or sell copies of the Software, and to
+ * permit persons to whom the Software is furnished to do so.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see http://www.opensource.org/licenses/AGPL-3.0.
+ * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+ * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+ * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+ * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+ * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+ * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
 Welcome to hacking BibleForge.
@@ -40,7 +48,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 
 -->
     <title>{TITLE}</title>
-    <link rel=stylesheet href="/styles/base.css?38356234">
+    <link rel=stylesheet href="/styles/base.css?39075858">
     {LANG_CSS}
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
