--- a/client/index.html
+++ b/client/index.html
@@ -12,25 +12,33 @@
  * @date    10-30-08
  * @version alpha (α)
  * @link    http://BibleForge.com
- * @license GNU Affero General Public License 3.0 (AGPL-3.0)
- * @author  BibleForge <info@bibleforge.com>
+ * @license MIT
  */
 
-/**
+/*!
+ * The BibleForge motto:
+ *
+ * "all things whatsoever ye would that men should do to you, do ye even so to them."
+ *     —Jesus (Matthew 7:12)
+ */
+
+/*!
  * Copyright (C) 2013
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * Permission is hereby granted, free of charge, to any person obtaining
+ * a copy of this software and associated documentation files (the
+ * “Software”), to deal in the Software without restriction, including
+ * without limitation the rights to use, copy, modify, merge, publish,
+ * distribute, sublicense, and/or sell copies of the Software, and to
+ * permit persons to whom the Software is furnished to do so.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see http://www.opensource.org/licenses/AGPL-3.0.
+ * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+ * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+ * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+ * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+ * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+ * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
 Welcome to hacking BibleForge.
@@ -58,7 +66,7 @@ which may be loaded later, are located in styles/night.css.
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?38356234">
+    <link rel=stylesheet href="/styles/base.css?39075858">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
@@ -107,7 +115,7 @@ which may be loaded later, are located in styles/night.css.
     ><div class=scrolls></div
     ><div class=loaders></div
 ></div
-><script src="/js/lang/en.js?39054940"></script
-><script src="/js/main.js?39055948"></script
+><script src="/js/lang/en.js?39075857"></script
+><script src="/js/main.js?39075883"></script
 ></body
 ></html>
