Changed the way the license name is displayed.

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
  * @date    10-30-08
  * @version alpha (α)
  * @link    http://BibleForge.com
- * @license MIT
+ * @license The MIT License (MIT)
  */
 
 /*!
@@ -66,7 +66,7 @@ which may be loaded later, are located in styles/night.css.
 -->
     <!-- TODO: Set the page title (and inputIcon title) with language specific JavaScript. -->
     <title>BibleForge</title>
-    <link rel=stylesheet href="/styles/base.css?39075858">
+    <link rel=stylesheet href="/styles/base.css?39136917">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
     <!-- NOTE: May want to use the precomposed option (apple-touch-icon-precomposed). -->
@@ -115,7 +115,7 @@ which may be loaded later, are located in styles/night.css.
     ><div class=scrolls></div
     ><div class=loaders></div
 ></div
-><script src="/js/lang/en.js?39114690"></script
-><script src="/js/main.js?39114770"></script
+><script src="/js/lang/en.js?39136916"></script
+><script src="/js/main.js?39136917"></script
 ></body
 ></html>
