--- a/server/index_non-js.html
+++ b/server/index_non-js.html
@@ -13,7 +13,7 @@
  * @date    05-26-12
  * @version alpha (α)
  * @link    http://BibleForge.com
- * @license MIT
+ * @license The MIT License (MIT)
  */
 
 /*!
@@ -48,7 +48,7 @@ This is a non-JavaScript version of the HTML.  See index.html for more info abou
 
 -->
     <title>{TITLE}</title>
-    <link rel=stylesheet href="/styles/base.css?39075858">
+    <link rel=stylesheet href="/styles/base.css?39136917">
     {LANG_CSS}
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <!-- This graphic is used by handhelds and tablets for a bookmark icon. -->
